# agent-keyring

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_connector_request.md  ux_pain_point.md
docs/: architecture.md  connector-sdk.md  mvp-foundation.md  provider-adapter.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/adapters/: connector_trait.rs  mod.rs  provider_trait.rs
src-tauri/src/adapters/connectors/: claude_code.rs  codex_cli.rs  mod.rs
src-tauri/src/adapters/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/commands/: backup_commands.rs  connector_commands.rs  mod.rs  provider_commands.rs  sync_commands.rs
src-tauri/src/services/: backup_manager.rs  connector_registry.rs  discovery_service.rs  mod.rs  provider_registry.rs  sync_engine.rs
src-tauri/src/types/: backup.rs  command.rs  connector.rs  mod.rs  provider.rs  sync.rs
src/app/: App.tsx
src/components/layout/: AppShell.tsx
src/components/ui/: StatusPill.tsx
src/data/: mock.ts
src/features/backups/: index.ts
src/features/connectors/: index.ts
src/features/discovery/: index.ts
src/features/providers/: index.ts
src/features/settings/: index.ts
src/features/sync/: index.ts
src/pages/: ClientsPage.tsx  DashboardPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  SyncPage.tsx
src/styles/: global.css
(+20 files in other folders)
